deploy/overlays/acc/patches/ingress/test/ehrbase.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ehrbase-ingress
  namespace: dh-health
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: ehrbase.test.fehr.amumc.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-ehrbase
                port:
                  number: 8080
